# quantum-money

./: .gitignore  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.cursor/: launch.json
.cursor/rules/: dev-workflow-activation.mdc  knowledge-base.mdc  knowledge.mdc  python-conventions.mdc  quality.mdc
.cursor/skills/dev-workflow/: SKILL.md
.cursor/skills/knowledge-management/: SKILL.md
.cursor/skills/lint-format/: SKILL.md
.cursor/skills/quality-assurance/: SKILL.md
.cursor/skills/run-tests/: SKILL.md
.cursor/skills/write-pytest/: .managed-skill.md  SKILL.md
.cursor/skills/write-pytest/templates/: test-patterns-rule.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.hypothesis/constants/: 17c505a38ed53b74  c85d21f9b66bbf41  cba5089761298f11  d500fb9037c45afd  e2d3e5560c11bc2a
docs/: api-reference.md  concepts.md  examples.md  getting-started.md  index.md
knowledge/: architecture.md  concepts.md  decisions.md
src/quantum_money/: __init__.py  errors.py  money.py  nodes.py  qmoney.py
src/quantum_money/ext/: __init__.py  marshmallow.py
src/quantum_money/ext/sa/: __init__.py  types.py
tests/: conftest.py  test_hypothesis.py  test_money.py  test_nodes.py  test_performance.py  test_qmoney_arithmetic.py  test_qmoney_errors.py  test_qmoney_observe.py  test_quantum_money.py  test_rounding.py
tests/ext/: test_marshmallow.py
tests/ext/sa/: conftest.py  test_sa_money_type.py
