[project]
name = "quantum-money"
version = "0.1.0"
description = "Like a quantum object that can be in many states before observation, quantum-money only performs its calculations when someone tries to observe the value."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_money"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["ruff", "black", "pytest", "mkdocs-material"]
